@@ -1,9 +1,8 @@
-package de.adrianlange.mcd.strategy.mozillaautoconf;
+package de.adrianlange.mcd.strategy.mozillaautoconfig;
 
+import de.adrianlange.mcd.EmailAddress;
 import de.adrianlange.mcd.MailserverConfigurationDiscoveryContext;
 import de.adrianlange.mcd.MailserverConfigurationDiscoveryContext.DiscoveryScope;
-import de.adrianlange.mcd.infrastructure.dns.TxtDnsResolver;
-import de.adrianlange.mcd.infrastructure.dns.TxtDnsResolverImpl;
 import de.adrianlange.mcd.infrastructure.xml.XmlDocumentUrlReader;
 import de.adrianlange.mcd.infrastructure.xml.XmlDocumentUrlReaderImpl;
 import de.adrianlange.mcd.model.Authentication;
@@ -11,9 +10,8 @@ import de.adrianlange.mcd.model.MailserverService;
 import de.adrianlange.mcd.model.OAuth2;
 import de.adrianlange.mcd.model.Protocol;
 import de.adrianlange.mcd.model.SocketType;
-import de.adrianlange.mcd.model.impl.MozillaAutoconfMailserverServiceImpl;
+import de.adrianlange.mcd.model.impl.MozillaAutoconfigMailserverServiceImpl;
 import de.adrianlange.mcd.model.impl.OAuth2Impl;
-import de.adrianlange.mcd.strategy.EmailAddress;
 import de.adrianlange.mcd.strategy.MailserverConfigurationDiscoveryStrategy;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -21,13 +19,14 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
-import org.xbill.DNS.TXTRecord;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -38,10 +37,10 @@ import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 
-public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements MailserverConfigurationDiscoveryStrategy {
+public class MozillaAutoconfigMailserverConfigurationDiscoveryStrategy implements MailserverConfigurationDiscoveryStrategy {
 
   private static final Logger LOG =
-      LoggerFactory.getLogger( MozillaAutoconfMailserverConfigurationDiscoveryStrategy.class );
+      LoggerFactory.getLogger( MozillaAutoconfigMailserverConfigurationDiscoveryStrategy.class );
 
   private static final String EL_ROOT = "clientConfig";
 
@@ -81,15 +80,23 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
 
   private final MailserverConfigurationDiscoveryContext context;
 
-  private XmlDocumentUrlReader xmlDocumentUrlReader = new XmlDocumentUrlReaderImpl();
-
-  private TxtDnsResolver txtDnsResolver;
+  private final XmlDocumentUrlReader xmlDocumentUrlReader;
 
 
-  public MozillaAutoconfMailserverConfigurationDiscoveryStrategy( MailserverConfigurationDiscoveryContext context ) {
+  public MozillaAutoconfigMailserverConfigurationDiscoveryStrategy( MailserverConfigurationDiscoveryContext context ) {
+
+    this( context, new XmlDocumentUrlReaderImpl( context.getHttpTimeout(), context.getExecutor() ) );
+  }
+
+
+  /**
+   * Constructor for tests, allows injecting the document reader.
+   */
+  MozillaAutoconfigMailserverConfigurationDiscoveryStrategy( MailserverConfigurationDiscoveryContext context,
+                                                             XmlDocumentUrlReader xmlDocumentUrlReader ) {
 
     this.context = context;
-    txtDnsResolver = new TxtDnsResolverImpl( context.getDnsLookupContext() );
+    this.xmlDocumentUrlReader = xmlDocumentUrlReader;
   }
 
 
@@ -99,7 +106,7 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
     var urls = getLookupUrls( emailAddress.getDomainPart().toIdn(), emailAddress.toIdn() );
     var placeholders = getPlaceholders( emailAddress );
 
-    return getCompletableFutures( emailAddress.getDomainPart(), urls, placeholders );
+    return getCompletableFutures( urls, placeholders );
   }
 
 
@@ -109,42 +116,18 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
     var urls = getLookupUrls( domainPart.toIdn(), null );
     var placeholders = getPlaceholders( domainPart );
 
-    return getCompletableFutures( domainPart, urls, placeholders );
+    return getCompletableFutures( urls, placeholders );
   }
 
 
-  private List<CompletableFuture<List<MailserverService>>> getCompletableFutures( EmailAddress.DomainPart domainPart,
-                                                                                  Collection<String> urls, Map<String
+  private List<CompletableFuture<List<MailserverService>>> getCompletableFutures( Collection<String> urls, Map<String
       , String> placeholders ) {
 
-    List<CompletableFuture<List<MailserverService>>> completableFutures = new ArrayList<>();
     // @formatter:off
-    urls.stream()
+    return urls.stream()
         .map( url -> CompletableFuture.supplyAsync( () -> getMailserverServicesFromUrl( url, placeholders ), context.getExecutor() ) )
-        .forEach( completableFutures::add );
+        .collect( Collectors.toCollection( ArrayList::new ) );
     // @formatter:on
-    completableFutures.add( getMailserverServicesFromDnsUrl( domainPart.toIdn(), placeholders ) );
-
-    return completableFutures;
-  }
-
-
-  private CompletableFuture<List<MailserverService>> getMailserverServicesFromDnsUrl( String domain, Map<String,
-      String> placeholders ) {
-
-    return CompletableFuture.supplyAsync( () -> {
-      // @formatter:off
-      return txtDnsResolver.getTxtRecords( domain ).stream()
-          .map( TXTRecord::getStrings )
-          .map( t -> String.join( "", t ) )
-          .filter( u -> u.startsWith( "mailconf=https://" ) )
-          .map( u -> u.replaceFirst( "^mailconf=", "" ) )
-          .map( u -> getMailserverServicesFromUrl( u, placeholders ) )
-          .flatMap( List::stream )
-          .collect( Collectors.toList() );
-      // @formatter:on
-
-    }, context.getExecutor() );
   }
 
 
@@ -153,8 +136,8 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
     // @formatter:off
     return getDocumentFromUrl( url ).map(
         document -> getMailserverServicesFromDocument( document, placeholders ).stream()
-            .filter( s -> context.getDiscoveryScopes().contains( DiscoveryScope.get( s.getProtocol() ) ) )
-            .collect( Collectors.toList() ) )
+            .filter( s -> context.getDiscoveryScopes().contains( DiscoveryScope.of( s.getProtocol() ) ) )
+            .toList() )
         .orElse( Collections.emptyList() );
     // @formatter:on
   }
@@ -163,7 +146,7 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
   private static List<MailserverService> getMailserverServicesFromDocument( Document document,
                                                                             Map<String, String> placeholders ) {
 
-    if( !document.getDocumentElement().getNodeName().equals( EL_ROOT ) ) {
+    if( !document.getDocumentElement().getNodeName().equalsIgnoreCase( EL_ROOT ) ) {
       LOG.debug( "Document root {} must equal {}!", document.getDocumentElement().getNodeName(), EL_ROOT );
       return Collections.emptyList();
     }
@@ -182,7 +165,7 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
         .filter( e -> e.getNodeName().equalsIgnoreCase( EL_1_EMAIL_PROVIDER ) )
         .map( e -> getMailserverServicesFromEmailProvider( e, placeholders, oAuth2s ) )
         .flatMap( List::stream )
-        .collect( Collectors.toList() );
+        .toList();
     // @formatter:on
   }
 
@@ -196,7 +179,7 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
         .map( e -> getMailserverServiceFromElement( e, placeholders, oAuth2s ) )
         .filter( Optional::isPresent )
         .map( Optional::get )
-        .collect( Collectors.toList() );
+        .toList();
     // @formatter:on
   }
 
@@ -208,20 +191,35 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
     if( mailserverService == null )
       return Optional.empty();
 
-    getElementStreamOf( serverElement.getChildNodes() ).forEach( c -> {
-      if( c.getNodeName().equalsIgnoreCase( EL_3_HOSTNAME ) )
-        mailserverService.setHost( replacePlaceholders( c.getTextContent(), placeholders ) );
-      else if( c.getNodeName().equalsIgnoreCase( EL_3_PORT ) )
-        mailserverService.setPort( Integer.parseInt( c.getTextContent() ) );
-      else if( c.getNodeName().equalsIgnoreCase( EL_3_SOCKET_TYPE ) )
-        mailserverService.setSocketType( SocketType.parse( c.getTextContent() ) );
-      else if( c.getNodeName().equalsIgnoreCase( EL_3_AUTHENTICATION ) )
-        mailserverService.addAuthentication( Authentication.parse( c.getTextContent() ) );
-      else if( c.getNodeName().equalsIgnoreCase( EL_3_USERNAME ) )
-        mailserverService.setUsername( replacePlaceholders( c.getTextContent(), placeholders ) );
-      else if( c.getNodeName().equalsIgnoreCase( EL_3_PASSWORD ) )
-        mailserverService.setPassword( replacePlaceholders( c.getTextContent(), placeholders ) );
-    } );
+    for( Element c : getElementStreamOf( serverElement.getChildNodes() ).toList() ) {
+      var text = c.getTextContent();
+      if( c.getNodeName().equalsIgnoreCase( EL_3_HOSTNAME ) ) {
+        mailserverService.setHost( replacePlaceholders( text, placeholders ) );
+      } else if( c.getNodeName().equalsIgnoreCase( EL_3_PORT ) ) {
+        var port = parsePort( text );
+        if( port == null ) {
+          LOG.debug( "Ignoring {} {} because of invalid port '{}'", serverElement.getNodeName(),
+              serverElement.getAttribute( "type" ), text );
+          return Optional.empty();
+        }
+        mailserverService.setPort( port );
+      } else if( c.getNodeName().equalsIgnoreCase( EL_3_SOCKET_TYPE ) ) {
+        var socketType = SocketType.parse( text );
+        if( socketType == null )
+          LOG.debug( "Ignoring unknown socket type '{}'", text );
+        mailserverService.setSocketType( socketType );
+      } else if( c.getNodeName().equalsIgnoreCase( EL_3_AUTHENTICATION ) ) {
+        var authentication = Authentication.parse( text );
+        if( authentication == null )
+          LOG.debug( "Ignoring unknown authentication method '{}'", text );
+        else
+          mailserverService.addAuthentication( authentication );
+      } else if( c.getNodeName().equalsIgnoreCase( EL_3_USERNAME ) ) {
+        mailserverService.setUsername( replacePlaceholders( text, placeholders ) );
+      } else if( c.getNodeName().equalsIgnoreCase( EL_3_PASSWORD ) ) {
+        mailserverService.setPassword( replacePlaceholders( text, placeholders ) );
+      }
+    }
 
     mailserverService.addAllOAuth2s( oAuth2s );
 
@@ -229,13 +227,24 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
   }
 
 
-  private static MozillaAutoconfMailserverServiceImpl createMailserverServiceForProtocol( Element serverElement ) {
+  private static Integer parsePort( String text ) {
+
+    try {
+      var port = Integer.parseInt( text.trim() );
+      return port >= 1 && port <= 65535 ? port : null;
+    } catch( NumberFormatException e ) {
+      return null;
+    }
+  }
+
+
+  private static MozillaAutoconfigMailserverServiceImpl createMailserverServiceForProtocol( Element serverElement ) {
 
     var protocol = getProtocolFromElement( serverElement );
     if( protocol == null )
       return null;
 
-    var mailserverService = new MozillaAutoconfMailserverServiceImpl();
+    var mailserverService = new MozillaAutoconfigMailserverServiceImpl();
     mailserverService.setProtocol( protocol );
 
     return mailserverService;
@@ -322,16 +331,25 @@ public class MozillaAutoconfMailserverConfigurationDiscoveryStrategy implements 
 
   private Set<String> getLookupUrls( String domain, String emailAddress ) {
 
-    Set<String> urls = new HashSet<>();
+    Set<String> urls = new LinkedHashSet<>();
 
-    if( emailAddress == null ) {
-      urls.add( "http://autoconfig." + domain + "/mail/config-v1.1.xml" );
-    } else {
-      urls.add( "http://autoconfig." + domain + "/mail/config-v1.1.xml?emailaddress=" + emailAddress );
-    }
-    urls.add( "http://" + domain + "/.well-known/autoconfig/mail/config-v1.1.xml" );
+    urls.addAll( getLookupUrls( "https", domain, emailAddress ) );
+    if( context.isInsecureHttpAllowed() )
+      urls.addAll( getLookupUrls( "http", domain, emailAddress ) );
 
     return urls;
+  }
+
+
+  private static List<String> getLookupUrls( String scheme, String domain, String emailAddress ) {
+
+    var autoconfigUrl = scheme + "://autoconfig." + domain + "/mail/config-v1.1.xml";
+    if( emailAddress != null )
+      autoconfigUrl += "?emailaddress=" + URLEncoder.encode( emailAddress, StandardCharsets.UTF_8 );
+
+    var wellKnownUrl = scheme + "://" + domain + "/.well-known/autoconfig/mail/config-v1.1.xml";
+
+    return List.of( autoconfigUrl, wellKnownUrl );
   }
 
 
