@@ -1,13 +1,14 @@
 package de.adrianlange.mcd.strategy.srvrecord;
 
+import de.adrianlange.mcd.EmailAddress;
 import de.adrianlange.mcd.MailserverConfigurationDiscoveryContext;
+import de.adrianlange.mcd.MailserverConfigurationDiscoveryContext.DiscoveryScope;
 import de.adrianlange.mcd.infrastructure.dns.SrvDnsResolver;
 import de.adrianlange.mcd.infrastructure.dns.SrvDnsResolverImpl;
 import de.adrianlange.mcd.model.MailserverService;
 import de.adrianlange.mcd.model.Protocol;
 import de.adrianlange.mcd.model.SocketType;
 import de.adrianlange.mcd.model.impl.SrvRecordMailserverServiceImpl;
-import de.adrianlange.mcd.strategy.EmailAddress;
 import de.adrianlange.mcd.strategy.MailserverConfigurationDiscoveryStrategy;
 import org.xbill.DNS.SRVRecord;
 
@@ -15,20 +16,29 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 
 public class SrvRecordMailserverConfigurationDiscoveryStrategy implements MailserverConfigurationDiscoveryStrategy {
 
-  private SrvDnsResolver srvDnsResolver;
+  private final SrvDnsResolver srvDnsResolver;
 
   private final MailserverConfigurationDiscoveryContext context;
 
 
   public SrvRecordMailserverConfigurationDiscoveryStrategy( MailserverConfigurationDiscoveryContext context ) {
 
-    srvDnsResolver = new SrvDnsResolverImpl( context.getDnsLookupContext() );
+    this( context, new SrvDnsResolverImpl( context.getDnsLookupContext() ) );
+  }
+
+
+  /**
+   * Constructor for tests, allows injecting the DNS resolver.
+   */
+  SrvRecordMailserverConfigurationDiscoveryStrategy( MailserverConfigurationDiscoveryContext context,
+                                                     SrvDnsResolver srvDnsResolver ) {
+
     this.context = context;
+    this.srvDnsResolver = srvDnsResolver;
   }
 
 
@@ -46,7 +56,7 @@ public class SrvRecordMailserverConfigurationDiscoveryStrategy implements Mailse
     return Arrays.stream( SrvProtocol.values() )
         .filter( p -> context.getDiscoveryScopes().contains( p.discoveryScope ) )
         .map( p -> CompletableFuture.supplyAsync( () -> getMailserverServicesForProtocol( domainPart.toIdn(), p ), context.getExecutor() ) )
-        .collect( Collectors.toList() );
+        .toList();
     //@formatter:on
   }
 
@@ -78,13 +88,22 @@ public class SrvRecordMailserverConfigurationDiscoveryStrategy implements Mailse
   }
 
 
+  /**
+   * SRV service labels for mail protocols. <code>_submission</code>, <code>_imap(s)</code> and <code>_pop3(s)</code>
+   * are defined in RFC 6186, <code>_submissions</code> (SMTP submission over implicit TLS) was added by RFC 8314
+   * section 5.1. Labels without an "s" suffix do not tell whether the server offers STARTTLS, so their socket type is
+   * unknown (<code>null</code>).
+   */
   enum SrvProtocol {
-    SUBMISSION( "_submission", Protocol.SMTP, null,
-        MailserverConfigurationDiscoveryContext.DiscoveryScope.SUBMISSION ), IMAP( "_imap", Protocol.IMAP, null,
-        MailserverConfigurationDiscoveryContext.DiscoveryScope.RECEPTION ), IMAPS( "_imaps", Protocol.IMAP,
-        SocketType.SSL, MailserverConfigurationDiscoveryContext.DiscoveryScope.RECEPTION ), POP3( "_pop3",
-        Protocol.POP3, null, MailserverConfigurationDiscoveryContext.DiscoveryScope.RECEPTION ), POP3S( "_pop3s",
-        Protocol.POP3, SocketType.SSL, MailserverConfigurationDiscoveryContext.DiscoveryScope.RECEPTION );
+
+    // @formatter:off
+    SUBMISSION( "_submission", Protocol.SMTP, null, DiscoveryScope.SUBMISSION ),
+    SUBMISSIONS( "_submissions", Protocol.SMTP, SocketType.SSL, DiscoveryScope.SUBMISSION ),
+    IMAP( "_imap", Protocol.IMAP, null, DiscoveryScope.RECEPTION ),
+    IMAPS( "_imaps", Protocol.IMAP, SocketType.SSL, DiscoveryScope.RECEPTION ),
+    POP3( "_pop3", Protocol.POP3, null, DiscoveryScope.RECEPTION ),
+    POP3S( "_pop3s", Protocol.POP3, SocketType.SSL, DiscoveryScope.RECEPTION );
+    // @formatter:on
 
     public final String protocolPrefix;
 
@@ -92,11 +111,10 @@ public class SrvRecordMailserverConfigurationDiscoveryStrategy implements Mailse
 
     public final SocketType socketType;
 
-    public final MailserverConfigurationDiscoveryContext.DiscoveryScope discoveryScope;
+    public final DiscoveryScope discoveryScope;
 
 
-    SrvProtocol( String protocolPrefix, Protocol protocol, SocketType socketType,
-                 MailserverConfigurationDiscoveryContext.DiscoveryScope discoveryScope ) {
+    SrvProtocol( String protocolPrefix, Protocol protocol, SocketType socketType, DiscoveryScope discoveryScope ) {
 
       this.protocolPrefix = protocolPrefix;
       this.protocol = protocol;
